--- a/FCD_example.ipynb
+++ b/FCD_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,29 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/system/apps/biosoft/python-361/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
    ],
    "source": [
-    "# Load generated molecules\n",
-    "gen_mol_file = \"generated_smiles/JKUnet.smi\" #input file which contains one generated SMILES per line\n",
-    "gen_mol = pd.read_csv(gen_mol_file,header=None)[0].values[:5000] #take at least 5000 molecules \n",
-    "\n",
-    "# Load ChEMBL Stats\n",
-    "mu_chembl, cov_chembl = pickle.load(open(\"chembl_50k_stats.p\", 'rb')).values() #statistics of random 50,000 chembl molecules, which were not used for training\n",
-    "\n",
     "#Load Auxiliary functions\n",
-    "exec(open('FCD.py').read()) #frechet distance, keras loss functions, data_generator, CHEMBLNET"
+    "exec(open('FCD.py').read()) #frechet distance, keras loss functions, data_generator, CHEMBLNET\n",
+    "\n",
+    "# Load generated molecules\n",
+    "gen_mol_file = \"generated_smiles/LSTM_Segler.smi\" #input file which contains one generated SMILES per line\n",
+    "gen_mol = pd.read_csv(gen_mol_file,header=None)[0] #take at least 10000 molecules \n",
+    "sample = np.random.choice(gen_mol, 10000, replace=False)\n",
+    "sample_std = canoncial_smiles(sample)\n",
+    "\n",
+    "# Load ChEMNet and reference stats\n",
+    "mu_ref, cov_ref = pickle.load(open(\"ref_combined_stat.p\", 'rb')).values() #statistics of random 50,000 chembl molecules, which were not used for training\n",
+    "model = load_ref_model('ChemNet_v0.13_pretrained.h5')"
    ]
   },
   {
@@ -59,34 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading model\n",
-      "calculating activations\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2.565788716564988"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get CHEBMLNET activations of generated molecules \n",
-    "gen_mol_act = get_predictions(gen_mol)\n",
-    "FCD = calculate_frechet_distance(mu1=np.mean(gen_mol_act, axis=0), mu2=mu_chembl, sigma1=np.cov(gen_mol_act.T), sigma2=cov_chembl)\n",
+    "gen_mol_act = get_predictions(model, sample_std)\n",
+    "FCD = calculate_frechet_distance(mu1=np.mean(gen_mol_act, axis=0), mu2=mu_ref, \n",
+    "                                 sigma1=np.cov(gen_mol_act.T), sigma2=cov_ref)\n",
     "FCD"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
