--- a/FCD_example.ipynb
+++ b/FCD_example.ipynb
@@ -40,9 +40,9 @@
     "\n",
     "# Load generated molecules\n",
     "gen_mol_file = \"generated_smiles/LSTM_Segler.smi\" #input file which contains one generated SMILES per line\n",
-    "gen_mol = pd.read_csv(gen_mol_file,header=None)[0] #take at least 10000 molecules \n",
+    "gen_mol = pd.read_csv(gen_mol_file,header=None)[0] #IMPORTANT: take at least 10000 molecules as FCD can vary with sample size \n",
     "sample = np.random.choice(gen_mol, 10000, replace=False)\n",
-    "sample_std = canoncial_smiles(sample)\n",
+    "sample_std = canoncial_smiles(sample)\n #IMPORTANT: use canoncial SMILES otherwise the FCD might be not representative",
     "\n",
     "# Load ChEMNet and reference stats\n",
     "mu_ref, cov_ref = pickle.load(open(\"ref_combined_stat.p\", 'rb')).values() #statistics of random 50,000 chembl molecules, which were not used for training\n",
