file paths changed

--- a/FCD_example.ipynb
+++ b/FCD_example.ipynb
@@ -36,7 +36,7 @@
    ],
    "source": [
     "#Load Auxiliary functions\n",
-    "exec(open('FCD.py').read()) #frechet distance, keras loss functions, data_generator, CHEMBLNET\n",
+    "exec(open('fcd/FCD.py').read()) #frechet distance, keras loss functions, data_generator, CHEMBLNET\n",
     "\n",
     "# Load generated molecules\n",
     "gen_mol_file = \"generated_smiles/LSTM_Segler.smi\" #input file which contains one generated SMILES per line\n",
@@ -45,8 +45,8 @@
     "sample_std = canoncial_smiles(sample)\n #IMPORTANT: use canoncial SMILES otherwise the FCD might be not representative",
     "\n",
     "# Load ChEMNet and reference stats\n",
-    "mu_ref, cov_ref = pickle.load(open(\"ref_combined_stat.p\", 'rb')).values() #statistics of random 50,000 chembl molecules, which were not used for training\n",
-    "model = load_ref_model('ChemNet_v0.13_pretrained.h5')"
+    "mu_ref, cov_ref = pickle.load(open(\"fcd/ref_combined_stat.p\", 'rb')).values() #statistics of random 50,000 chembl molecules, which were not used for training\n",
+    "model = load_ref_model('fcd/ChemNet_v0.13_pretrained.h5')"
    ]
   },
   {
