--- a/FCD_example.ipynb
+++ b/FCD_example.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T08:09:14.508769Z",
+     "start_time": "2020-04-23T08:09:14.506198Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -11,7 +16,7 @@
     "import pickle\n",
     "import os\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]= '1' #set gpu "
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]= '0' #set gpu "
    ]
   },
   {
@@ -23,14 +28,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T08:09:25.413524Z",
+     "start_time": "2020-04-23T08:09:18.146262Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "Using TensorFlow backend.\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/lfr/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "RDKit WARNING: [10:09:20] Enabling RDKit 2019.09.1 jupyter extensions\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 23 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 20 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 18 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 30 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 22 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 7 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 17 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 30 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 8 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 18 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 5 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 1 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [10:09:20] Explicit valence for atom # 13 N, 4, is greater than permitted\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/lfr/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3313: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:From /home/lfr/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n"
      ]
     }
    ],
@@ -42,8 +102,8 @@
     "gen_mol_file = \"generated_smiles/LSTM_Segler.smi\" #input file which contains one generated SMILES per line\n",
     "gen_mol = pd.read_csv(gen_mol_file,header=None)[0] #IMPORTANT: take at least 10000 molecules as FCD can vary with sample size \n",
     "sample = np.random.choice(gen_mol, 10000, replace=False)\n",
-    "sample_std = canoncial_smiles(sample)\n #IMPORTANT: use canoncial SMILES otherwise the FCD might be not representative",
-    "\n",
+    "sample_std = canoncial_smiles(sample)\n",
+    " #IMPORTANT: use canoncial SMILES otherwise the FCD might be not representative\n",
     "# Load ChEMNet and reference stats\n",
     "mu_ref, cov_ref = pickle.load(open(\"fcd/ref_combined_stat.p\", 'rb')).values() #statistics of random 50,000 chembl molecules, which were not used for training\n",
     "model = load_ref_model('fcd/ChemNet_v0.13_pretrained.h5')"
@@ -102,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
