--- a/example.ipynb
+++ b/example.ipynb
@@ -22,29 +22,15 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
-    "import os\n",
-    "import fcd\n",
     "from fcd import get_fcd, load_ref_model,canonical_smiles, get_predictions, calculate_frechet_distance\n",
-    "np.random.seed(0)\n",
     "\n",
+    "np.random.seed(0)\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]= '0' #set gpu "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T09:11:09.581331Z",
-     "start_time": "2020-04-23T09:11:09.561260Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model = load_ref_model()"
    ]
   },
   {
@@ -60,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T09:11:14.733206Z",
-     "start_time": "2020-04-23T09:11:11.657743Z"
+     "end_time": "2020-04-23T09:13:50.403933Z",
+     "start_time": "2020-04-23T09:13:47.310624Z"
     }
    },
    "outputs": [
@@ -72,44 +58,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 16 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 12 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 9 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 15 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 6 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 2 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 5 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 10 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 13 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 7 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 10 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 28 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 4 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 3 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 32 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:12] Explicit valence for atom # 24 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:13] Explicit valence for atom # 12 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:13] Explicit valence for atom # 19 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 9 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 19 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 15 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 27 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 9 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 16 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 15 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 22 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 4 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 22 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:11:14] Explicit valence for atom # 24 N, 4, is greater than permitted\n"
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 18 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 5 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 2 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 10 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 22 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 1 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 13 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 13 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 5 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 10 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:48] Explicit valence for atom # 9 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 11 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 15 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 23 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 7 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 21 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 8 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 9 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [11:13:49] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
+      "RDKit ERROR: [11:13:50] Explicit valence for atom # 17 N, 5, is greater than permitted\n",
+      "RDKit ERROR: [11:13:50] Explicit valence for atom # 20 N, 5, is greater than permitted\n"
      ]
     }
    ],
    "source": [
+    "# Load chemnet model\n",
+    "model = load_ref_model()\n",
+    "\n",
     "# Load generated molecules\n",
     "gen_mol_file = \"generated_smiles/LSTM_Segler.smi\" #input file which contains one generated SMILES per line\n",
     "gen_mol = pd.read_csv(gen_mol_file,header=None)[0] #IMPORTANT: take at least 10000 molecules as FCD can vary with sample size \n",
