Port to pytorch

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,35 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T09:11:07.345354Z",
-     "start_time": "2020-04-23T09:11:07.321510Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "import os\n",
-    "\n",
+    "from rdkit import RDLogger                                                                                                                                                               \n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pickle\n",
     "from fcd import get_fcd, load_ref_model,canonical_smiles, get_predictions, calculate_frechet_distance\n",
     "\n",
+    "RDLogger.DisableLog('rdApp.*')\n",
+    "\n",
     "np.random.seed(0)\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]= '0' #set gpu "
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]= '0' #set gpu"
    ]
   },
   {
@@ -46,47 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T09:13:50.403933Z",
      "start_time": "2020-04-23T09:13:47.310624Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 18 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 5 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 2 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 10 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 22 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 1 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 13 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 13 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 5 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 10 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:48] Explicit valence for atom # 9 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 11 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 15 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 23 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 7 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 21 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 14 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 8 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 9 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:13:49] Explicit valence for atom # 6 N, 4, is greater than permitted\n",
-      "RDKit ERROR: [11:13:50] Explicit valence for atom # 17 N, 5, is greater than permitted\n",
-      "RDKit ERROR: [11:13:50] Explicit valence for atom # 20 N, 5, is greater than permitted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load chemnet model\n",
     "model = load_ref_model()\n",
@@ -113,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T09:11:27.207953Z",
@@ -125,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FCD:  0.3338613001233881\n"
+      "FCD:  0.333862289051325\n"
      ]
     }
    ],
@@ -151,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T09:11:38.873496Z",
@@ -163,20 +115,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FCD:  0.3338613001233881\n"
+      "FCD:  0.333862289051325\n"
      ]
     }
    ],
    "source": [
     "\"\"\"if you don't need to store the activations you can also take a shortcut.\"\"\"\n",
-    "fcd_score = get_fcd(model, can_sample1, can_sample2)\n",
+    "fcd_score = get_fcd(can_sample1, can_sample2, model)\n",
     "\n",
     "print('FCD: ',fcd_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T09:11:49.760022Z",
@@ -188,14 +140,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FCD:  25.63927611890624\n"
+      "FCD:  25.635578193222216\n"
      ]
     }
    ],
    "source": [
     "\"\"\"This is what happens if you do not canonicalize the smiles\"\"\"\n",
-    "fcd_score = get_fcd(model, can_sample1, sample2)\n",
-    "\n",
+    "fcd_score = get_fcd(can_sample1, sample2, model)\n",
     "print('FCD: ',fcd_score)"
    ]
   }
@@ -216,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
